--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                 <div class="head_info_container">
                     <div class="head_info_collected-acorns">
                         <div class="collected-acorns_text">
-                            오늘 모인 도토리
+                            모인 도토리
                         </div>
                         <span class="collected-acorns_num">
                             10알
@@ -471,7 +471,7 @@
                     </div>
                     <div class="head_info_my-acorns">
                         <div class="my-acorns_text">
-                            내가 담은 도토리
+                            나의 바구니
                         </div>
                         <div class="my-acorns_num">
                             <span class="num_text">
@@ -486,7 +486,7 @@
             </div>
             <div class="bot_section_container">
                 <div class="bot_text">
-                    겨울나기를 위해 도토리를 모으는 다람쥐처럼 마음이 배고플 때 꺼내 보도록 야금야금 모으는 마음의 양식
+                    야금야금 모아 마음이 추워질 때 꺼내 먹을 수 있는 마음의 양식
                 </div>
                 <span class="bot_maker">
                     <a href="https://www.instagram.com/dama__0112/">제작자 @dama_0112</a>
