--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <img src="@_collecting-acorns/popup_btn_basket.svg">
                     </span>
                     <span class="popup_btn_share">
-                        <img src="@_collecting-acorns/popup_img/img04.png">
+                        <img src="@_collecting-acorns/popup_btn_share.svg">
                     </span>
                 </div>
                 <div class="popup_header_link">
@@ -155,7 +155,7 @@
 
             </div>
             <div class="popup_img">
-                <img src="@_collecting-acorns/popup_img_sample.png">
+                <img src="@_collecting-acorns/popup_img/img04.png">
             </div>
             <div class="popup_text_container">
                 <span class="popup_text">
